--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     color: white;
 }
 
-html {ssss
+html {
     margin: 0;
     background-image: url('asset/bg1.jpeg'); /* Ensure the image path is correct */
     background-position: center;
