Corrected linkage in styles and html file.

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 html {
     margin: 0;
-    background-image: url('asset/bg1.jpeg'); /* Ensure the image path is correct */
+    background-image: url('assets/bg1.jpeg'); /* Ensure the image path is correct */
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
